<resources>
    <string name="app_name">Easy English</string>
    <string name="typetranslate">Введите перевод</string>
    <string name="next">Дальше</string>
    <string name="okay">Понятно</string>
    <string name="notlearn">Не хочу учить это слово</string>
    <string name="congrats">Поздравляем! Слово полностью выучено!</string>
    <string name="right">Правильно</string>
    <string name="wrong">Неправильно! Выучите:</string>
    <string name="learn">Изучать слово</string>
    <string name="deletedword">Слово удалено из Вашего словаря.</string>
    <string name="addedword">Слово добавлено в Ваш словарь.</string>
    <string name="easyenglish" translatable="false">Easy English</string>
    <string name="nothingfound">Ничего не найдено.</string>
    <string name="addwords">Добавить слова</string>
    <string name="learned0">Выучено на 0%</string>
    <string name="learned25">Выучено на 25%</string>
    <string name="learned50">Выучено на 50%</string>
    <string name="learned75">Выучено на 75%</string>
    <string name="learned100">Слово полностью выучено</string>
    <string name="howtolearn">Как заниматься</string>
    <string name="info">Добавляй слова в свой словарь\n\Учи слова выполняя задания</string>
    <string name="stats">Ваша статистика</string>
    <string name="dictwords">Слов в словаре</string>
    <string name="learnedwords">Выученных слов</string>
    <string name="start">Начать</string>
    <string name="mydict">Мой словарь</string>
    <string name="addmyword">Добавить своё слово</string>
    <string name="addingword">Добавление нового слова</string>
    <string name="typeword">Введите слово</string>
    <string name="next2">Далее</string>
    <string name="add">Добавить</string>
    <string name="errorWord">Слово не добавлено, т.к. оно должно состоять только из английских символов</string>
    <string name="errorTranslate">Слово не добавлено, т.к. его перевод должен состоять только из русских символов</string>
    <string name="errorAlreadyExist">Слово не добавлено, т.к. оно уже существует у Вас в словаре</string>
    <string name="successadd">Слово успещно добавлено. Спасибо!</string>
    <string name="cancel">Отмена</string>
    <string name="alreadyexist">Это слово уже есть в Вашем словаре.</string>
    <string name="dict">Словарь</string>
    <string name="addtodict">Добавить в Ваш словарь?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="learnagain">Начать обучение заново</string>
    <string name="deleteword">Удалить это слово</string>
    <string name="endlesson">Поздравляем!\n\Урок пройден</string>
    <string name="ansright">Отвечены\n\верно</string>
    <string name="answrong">Отвечены\n\неверно</string>
    <string name="completely">Полностью\n\выучены</string>
    <string name="results">Результаты</string>
    <string name="back">Назад</string>
    <string name="bad">Плохо</string>
    <string name="good">Хорошо</string>
    <string name="best">Отлично</string>
    <string name="about">Справка</string>
    <string name="exit">Выход</string>
    <string name="tomenu">В меню</string>
    <string name="author">Автор приложения Илья.\nВсе права защищены.</string>
    <string name="aboutaut">Об авторе</string>
    <string name="errorWords">В словаре должно быть минимум 5 слов.</string>
    <string name="backdict">Назад в свой словарь</string>
    <string name="aboutpr">Easy English — приложение для изучения английского языка прямо в своем телефоне.\n\nВы можете добавлять слова из общего словаря в свой для изучения.\n\nАлгоритм программы автоматически подбирает вам задания для запоминания слов из словаря.\n\nСлово автоматически удаляется из словаря при его полном изучении. Также, вы можете самостоятельно удалить слово или начать его обучение заново</string>
</resources>
