<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/EasyEnglishSpace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2" />

        <LinearLayout
            android:id="@+id/InfoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/howtolearn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1.55"
                android:fontFamily="@font/gothampro"
                android:text="@string/howtolearn"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1.45"
                app:autoSizeTextType="uniform"
                android:elegantTextHeight="false"
                android:fontFamily="@font/gothampro"
                android:text="@string/info"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/yourstats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:autoSizeTextType="uniform"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1.55"
                android:fontFamily="@font/gothampro"
                android:text="@string/stats"
                android:textAlignment="center"
                android:textColor="#6F0001"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/WordsCountLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/learnedLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/learnedwords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:autoSizeTextType="uniform"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.6"
                        android:fontFamily="@font/mikado"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="45sp" />

                    <TextView
                        android:id="@+id/lrndwords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/gothampro"
                        android:text="@string/learnedwords"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/space2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/DictLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wordsindict"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:autoSizeTextType="uniform"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.6"
                        android:fontFamily="@font/mikado"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="45sp" />

                    <TextView
                        android:id="@+id/dictwords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/gothampro"
                        android:text="@string/dictwords"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/space"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/Space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="27dp"
                android:layout_weight="1"
                android:background="@drawable/start_button"
                android:fontFamily="@font/gothampro"
                android:text="@string/start"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDict"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/start_button"
                android:fontFamily="@font/gothampro"
                android:text="@string/mydict"
                android:textSize="18sp" />

            <Button
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/info_button"
                android:fontFamily="@font/gothampro"
                android:text="@string/about"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/exit_button"
                android:fontFamily="@font/gothampro"
                android:text="@string/exit"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>